devops/kubernetes/general/basics/pv_pvc/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      name: internal
  policyTypes:
  - Egress
  - Ingress
  ingress:
    - {}
  egress:
    # mysql rule
  - to:
    - podSelector:
        matchLabels:
          name: mysql
    ports:
    - protocol: TCP
      port: 3306
    # frontend rule
  - to:
    - podSelector:
        matchLabels:
          name: payroll
    ports:
    - protocol: TCP
      port: 8080
  # NOTE: Here is allowed Egress traffic to TCP and UDP port. This has been added
  # to ensure that the internal DNS resolution works from the internal pod.
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
